# copyclickk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-main.yml  ci-pr.yml  nightly.yml  release.yml
scripts/: install.sh  uninstall.sh
src/core/: CMakeLists.txt  ClipboardItem.cpp  ClipboardItem.h
src/ipc/: CMakeLists.txt  ClipboardService.cpp  ClipboardService.h
src/kded/: CMakeLists.txt  ClipboardDaemon.cpp  ClipboardDaemon.h
src/privacy/: CMakeLists.txt  PrivacyFilter.cpp  PrivacyFilter.h
src/storage/: CMakeLists.txt  IHistoryRepository.h  InMemoryHistoryRepository.cpp  InMemoryHistoryRepository.h  SqliteHistoryRepository.cpp  SqliteHistoryRepository.h
src/ui/: CMakeLists.txt  SettingsModel.cpp  SettingsModel.h  TrayMenuViewModel.cpp  TrayMenuViewModel.h
src/uiqt/: CMakeLists.txt  TrayAppController.cpp  TrayAppController.h  main.cpp
tests/: CMakeLists.txt  history_repository_tests.cpp  ipc_service_tests.cpp  privacy_filter_tests.cpp  sqlite_repository_tests.cpp  tray_ui_tests.cpp
